[package]
name = "polling"
version = "2.0.2"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "Portable interface to epoll, kqueue, event ports, and wepoll"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/polling"
homepage = "https://github.com/smol-rs/polling"
documentation = "https://docs.rs/polling"
keywords = ["mio", "epoll", "kqueue", "iocp", "wepoll"]
categories = ["asynchronous", "network-programming", "os"]
readme = "README.md"

[features]
default = ["std"]
std = []

[dependencies]
log = "0.4.11"
libc = "0.2.77"

[dev-dependencies]
easy-parallel = "3.1.0"
